runtime/src/test/resources/tests/error/stack_overflow_2.wstl
package stack_overflow

result: loop()

def loop() {
  a()
}

def a() {
  b()
}

def b() {
  c()
}

def c() {
  d()
}

def d() {
  a()
}